--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 MNIST_data/*
 .pyc
+# Windows:
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Python:
+*.py[cod]
+*.so
+*.egg
+*.egg-info
+dist
+build
+
+# My configurations:
+db.ini
+deploy_key_rsa
